# W-lang

./: CMakelists.txt  language_prototype.weird  language_prototype.wlang  tic_tac_toe.weird
src/: CMakeLists.txt  main.cpp
src/ast/: AstNode.cpp  AstNode.hpp  AstVisitor.hpp  CMakeLists.txt  Expressions.cpp  Expressions.hpp  LValue.hpp  Statements.cpp  Statements.hpp  Visitor.hpp
src/core/: CMakeLists.txt  SourceLocation.hpp  SourceManager.cpp  SourceManager.hpp  SourceRange.hpp  types.hpp
src/errors/: CMakeLists.txt  ErrorReporter.cpp  ErrorReporter.hpp  Exceptions.hpp
src/interpreter/: CMakeLists.txt  EnvironmentGuard.hpp  EvalProxy.hpp  Interpreter.cpp  Interpreter.hpp
src/lexer/: CMakeLists.txt  Lexer.cpp  Lexer.hpp
src/lexer/src/: Lexer.cpp  Lexer.hpp
src/lexer/tests/: CMakeLists.txt  LexerTests.cpp
src/modules/: CMakeLists.txt  Gossip.cpp  Gossip.hpp
src/native_types/: CMakeLists.txt  String.cpp  String.hpp  Vector.cpp  Vector.hpp  common.cpp  common.hpp
src/parser/: CMakeLists.txt  ErrorMsgBuilder.cpp  ErrorMsgBuilder.hpp  Parser.cpp  Parser.hpp
src/parser/src/: Parser.cpp  Parser.hpp
src/runtime/: CMakeLists.txt  Environment.cpp  Environment.hpp  RuntimeErrors.hpp  RuntimeValue.cpp  RuntimeValue.hpp
src/token/: CMakeLists.txt  Token.cpp  Token.hpp
src/tokens/: CMakeLists.txt
src/utils/: AstPrinter.cpp  AstPrinter.hpp  CMakeLists.txt  Logging.cpp  Logging.hpp  Utils.cpp
src/vm/: CMakeLists.txt  VM.cpp
tests/interpreter/: CMakeLists.txt  InterpreterTests.cpp  InterpreterTestsFixture.hpp  NativeTypesInterpreterTests.cpp
(+64 files in other folders)
