add_subdirectory(token)
add_subdirectory(utils)
add_subdirectory(ast)
add_subdirectory(lexer)
add_subdirectory(parser)
add_subdirectory(runtime)
add_subdirectory(errors)
add_subdirectory(core)
add_subdirectory(modules)
add_subdirectory(native_types)
add_subdirectory(interpreter)

add_executable(main main.cpp)
target_link_libraries(main PRIVATE
    lexer parser token utils runtime modules interpreter ast native_types errors core)
